# Assistant-Agent

./: .gitignore  LICENSE  README.md  UPGRADE_v2.md  bridge.py  index.html  push_to_github.command  sath.db.backup_before_sim
SATH/: build.sh  main.swift
agents/automation/discord-business/: SOUL.md
agents/automation/flight-scraper/: SOUL.md
agents/automation/job-applicant/: SOUL.md
agents/automation/morning-briefing/: SOUL.md
agents/automation/negotiation-agent/: SOUL.md
agents/automation/overnight-coder/: SOUL.md
agents/business/churn-predictor/: SOUL.md
agents/business/competitor-pricing/: SOUL.md
agents/business/customer-support/: SOUL.md
agents/business/deal-forecaster/: SOUL.md
agents/business/erp-admin/: SOUL.md
agents/business/invoice-tracker/: SOUL.md
agents/business/lead-gen/: SOUL.md
agents/business/radar/: SOUL.md
design/: card-detail-modal.css  fragment-input.css  index.css  layout.css  result-card.css  settings.css  sidebar.css  space-canvas.css  tokens.css
docs/: demo.html
sath-server/: Cargo.toml
sath-server/migrations/: 20240410000001_init.sql
sath-server/src/: main.rs
sath-server/src/middleware/: auth.rs
sath-server/src/models/: mod.rs  sms.rs
sath-server/src/routes/: auth.rs  health.rs  mod.rs  sync.rs
sath-source/: __init__.py
sath-source/brain/: distillation.py  orchestrator.py  pipeline.py
sath-source/docs/: agent-flow.html  architecture.html
sath-source/executor/: agent_queue.py
sath-source/prompts/: intent_classifier.py
sath-source/schema/: migrations.sql
sath-source/sensor/: activity_watch.py
(+186 files in other folders)
