[package]
name = "sath-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Auth
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Aliyun SMS API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto (for Aliyun signature)
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

# Time & logging
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
